--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
 html,
 button,
 input,
@@ -12,7 +8,7 @@ textarea {
 
 html {
     font-size: 1em;
-    line-height: 1.4;
+    line-height: 1.4em;
 }
 
 ::-moz-selection {
@@ -62,6 +58,8 @@ h1 {
 	background-clip: text;
 	  -webkit-background-clip: text;
 	  -webkit-text-fill-color: transparent;
+	  
+	  /*transition: font-size 0.2s ease-out 0s;*/
 }
 
 .faceyboi {
@@ -79,8 +77,10 @@ h2 {
 	
 	font: 2.25em/1.5em "SF Mono", Menlo, "Courier New", Courier, mono;
 	font-size: 3vw;
-	font-weight: 600;
+	font-weight: normal;
 	color: #BBBFDB;
+	
+	/*transition: font-size 0.2s ease-out 0s;*/
 }
 
 p {
@@ -99,9 +99,13 @@ ul.social {
 
 ul.social li {
 	display: inline-block;
-	height: 64px;
-	width: 64px;
-	border-radius: 32px;
+	width: 4vw;
+	height: 4vw;
+	min-height: 44px;
+	min-width: 44px;
+	max-height: 72px;
+	max-width: 72px;
+	border-radius: 36px;
 	margin: 0 20px 20px 0;
 	
 	transition: all 0.2s ease-out 0s;
@@ -143,5 +147,4 @@ li.twitter {
 }
 li.twitter:hover {
 	background: url(../assets/Twitter.svg) no-repeat center rgba(29, 160, 242, 0.2);
-}
 }
