--- a/css/main.css
+++ b/css/main.css
@@ -48,13 +48,14 @@ h1 {
 	font-size:  96px;
 	font-size: 7vw;
 	line-height: 1.2em;
-	font-weight: 900;
+	font-weight: 800;
 	
 	word-wrap: break-word;
 	overflow: visible;
 	
 	color: #897EE6;
-	background: linear-gradient(45deg, #897EE6 0%, #E67EC1 100%);
+	/*background: linear-gradient(45deg, #897EE6 0%, #E67EC1 100%);*/
+	background: linear-gradient(90deg, #2B71D9 0%, #8E81FF 50%, #D4B3FF 100%);
 	background-clip: text;
 	  -webkit-background-clip: text;
 	  -webkit-text-fill-color: transparent;
@@ -64,10 +65,10 @@ h1 {
 
 .faceyboi {
 	position: absolute;
-	top: 7.2vw;
+	top: 7.4vw;
 	left: -7vw;
-	width: 3.9vw;
-	height: 3.9vw;
+	width: 3.8vw;
+	height: 3.8vw;
 	
 	content: url(../assets/faceyboi.svg);
 }
