Add fueled.com link

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@ body {
 	margin: auto 0;
 }
 
+a {
+	color: #897EE6;
+}
+
 strong {
 	font-weight: 600;
 }
@@ -82,6 +86,17 @@ h2 {
 	color: #BBBFDB;
 	
 	/*transition: font-size 0.2s ease-out 0s;*/
+}
+
+h2 a {
+	text-decoration: none;
+	color: inherit;
+	
+	transition: all 0.2s ease-out 0s;
+}
+h2 a:hover {
+	text-decoration: underline;
+	color: #897EE6;
 }
 
 p {
