--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ strong {
 
 .wrapper {
     width: 60%;
-	height: 70%;
+	height: 65%;
     margin: auto 12%;
 	position: absolute;
 	top: 0;
@@ -100,14 +100,14 @@ h2 a:hover {
 }
 
 p {
-	max-width: 600px;
+	max-width: 640px;
 	
 	font-size: 1em;
 	line-height: 2em;
 }
 
 ul.social {
-	margin-top: 150px;
+	margin-top: 10vh;
 	padding: 0;
 	font-size: 0;
 }
