Fix resize transition bug on h2 a

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ h2 a {
 	text-decoration: none;
 	color: inherit;
 	
-	transition: all 0.2s ease-out 0s;
+	transition: color 0.2s ease-out 0s;
 }
 h2 a:hover {
 	text-decoration: underline;
