--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ h2 {
 	margin-bottom: 0.35em;
 	font: 1.5em/1.2em "SF Mono", Menlo, Inconsolata, mono;
 	font-weight: normal;
-	color: #BBBFDB;
+	color: #C1C4DB;
 	
 	/*transition: font-size 0.2s ease-out 0s;*/
 }
@@ -118,7 +118,7 @@ h2 a:hover {
 }
 h2 a::after {
 	content: " ↗";
-	color: #BBBFDB;
+	color: #C1C4DB;
 }
 
 h3 {
@@ -131,7 +131,7 @@ h3 {
 h5 {
 	text-transform: uppercase;
 	/*font-variant: small-caps;*/
-	color: #BBBFDB;
+	color: #C1C4DB;
 }
 
 p {
@@ -286,7 +286,7 @@ li#cv:hover {
  	font-size: inherit;
  	font-size: small;
  	line-height: 1.5em;
- 	color: #BBBFDB;
+ 	color: #C1C4DB;
  	/*text-transform: uppercase;*/
- 	font-weight: 500;
+ 	font-weight: 600;
  }
