--- a/css/main.css
+++ b/css/main.css
@@ -56,13 +56,34 @@ strong {
 }
 
 .faceyboi {
-	position: absolute;
-	top: 7.4vw;
-	left: -7vw;
 	width: 3.8vw;
 	height: 3.8vw;
 	
+	position: absolute;
+	top: 6vw;
+	left: -8.4vw;
+	padding: 1.4vw;
+	
+	border-radius: 1vw;
+	
 	content: url(../assets/faceyboi.svg);
+	background: rgba(43, 112, 217, 0.04);
+	
+	transition: top, left, padding, transform, background, 0.1s ease-in-out 0s;
+}
+a:hover .faceyboi {
+	color: #fff;
+	background: rgba(43, 112, 217, 0.18);
+	
+	top: 5.4vw;
+	left: -9vw;
+	padding: 2vw;
+	
+	transform: scale(1.05);
+}
+a:active .faceyboi {
+	transform: scale(0.9);
+	background: rgba(43, 112, 217, 0.4);
 }
 
 h1 {
@@ -233,7 +254,7 @@ li#cv:hover {
  	font-size: large;
  }
  
- .cv div {
+ .cv section div {
  	display: inline-block;
  	vertical-align: top;
  	padding-right: 1vw;
